# try-actix-htmx

./: Cargo.toml
src/: main.rs  schemas.rs
src/api/: todo.rs
src/pages/: index.html  index.rs
static/css/: prevent-fouc.css
templates/: dev.html  index.html
