[package]
name = "try-actix-and-htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4"
actix-web-lab = "0.19.1"
askama = "0.12"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = { version = "0.15.0" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
